# ai-trading-bot

./: .env.example  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  MONITORING.md  README.md  RUNBOOK.md  TRADING.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
ansible/: README.md  ansible.cfg
ansible/inventory/: hosts.yml
ansible/playbooks/: site.yml
configs/: default.yaml  events.manual.yaml  events.yaml
db/: init.sql
deploy/: backup-timescaledb.sh  daily-equity-report.sh  event-watcher.sh  restore-timescaledb.sh  sync-monitoring.sh
deploy/systemd/: install.sh  trading-bot-db-backup.service  trading-bot-db-backup.timer  trading-bot-equity-report.service  trading-bot-equity-report.timer  trading-bot-event-watcher.service  trading-bot-event-watcher.timer  trading-bot-ingest.service  trading-bot-latency.service  trading-bot-latency.timer  trading-bot-paper-live.service  trading-bot-soak.service  trading-bot-soak.timer  trading-bot-testnet-live.service  trading-bot-writer.service
docs/: GITLAB.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: trading-bot.json
monitoring/prometheus/rules/: ai-trading-bot.yml
src/trading_bot/: __init__.py  cli.py  config.py  logging_setup.py  metrics.py
tests/: test_batch_parse.py  test_binance_sign.py  test_config.py  test_event_blackout.py  test_event_watcher.py  test_features.py  test_latency_probe.py  test_loadtest.py  test_mainnet_check.py  test_metrics.py  test_ml_paper.py  test_orderbook.py  test_risk.py  test_soak_filters.py
(+37 files in other folders)
