[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trading-bot"
version = "0.1.0"
description = "AI spot trading bot MVP (Binance Spot Testnet)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiohttp>=3.9",
  "websockets>=12.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "pyyaml>=6.0",
  "redis>=5.0",
  "asyncpg>=0.29",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "xgboost>=2.0",
  "joblib>=1.3",
  "structlog>=24.1",
  "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.9",
]

[project.scripts]
trading-bot = "trading_bot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["trading_bot"]
